--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,8 @@ navbar:
   left:
   - text: "Paper"
     href: paper.html
+  - text: "Análisis"
+    href: script/data-prep-B.html
   right:
     - icon: fa-github fa-lg
-      href: https://github.com/juancarloscastillo/equal_pay    
-    
+      href: https://github.com/juancarloscastillo/chilegaps
