--- a/_site.yml
+++ b/_site.yml
@@ -1,10 +1,10 @@
 name: "Project"
-output_dir: "docs"
+output_dir: "."
 output:
   html_document:
     theme: cosmo
     highlight: tango
-    css: 'docs/style.css'
+    css: 'style.css'
 navbar:
   title: "Percepción y justificación desigualdad Chile"
   left:
